--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "sqlite3": "^5.1.6",
-    "style-loader": "^3.3.2"
+    "style-loader": "^3.3.2",
+    "ts-localstorage": "^3.1.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
